--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "firebase": "^5.5.5",
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.2",
+    "react-beautiful-dnd": "^10.0.3",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "styled-components": "^4.1.3"
+    "react-scripts": "^2.1.2",
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
